Klienci banku widoczni w combobox

--- a/src/main/resources/fifth.fxml
+++ b/src/main/resources/fifth.fxml
@@ -59,6 +59,8 @@
                 <Button style="-fx-pref-width: 200" mnemonicParsing="false" onAction="#disableToolsMenu" text="Wyłącz 'Tools'" BorderPane.alignment="CENTER" />
                 <Button style="-fx-pref-width: 200" mnemonicParsing="false" onAction="#alertujUsera" text="Pokaż alert" BorderPane.alignment="CENTER" />
                 <Label onMouseClicked="#alertujUsera"> (na Label) pokaż alert</Label>
+                <ComboBox style="-fx-pref-width: 200" fx:id="komboKlientow"/>
+                <Button style="-fx-pref-width: 200" onAction="#refresh" text="Refresh Data"/>
             </VBox>
         </right>
         <center>
